assets/css/style.css
*:focus {
    outline:none !important;
}

#entire {
    background-image: url("../images/court.jpg");
    background-position: center top;
    background-size: 100% auto;
    background-repeat: no-repeat;
    height: 900px;
    width: 850px;;
    margin: 0 auto;
}

.hide {
    display: none;
}
.left {
    position: relative;
    
    left: 50px;
    float: left;
    font-size: x-large;
    text-align: center;
    
}
.right {
    position: relative;
    right: 50px;
    float: right;
    font-size: x-large;
    text-align: center;
    
}
.clear {
    clear: both;
}
h1 {
    text-align: center;
}
#reset-container {
    text-align: center;
    position: relative;
    top: 450px;
}

#winner {
    position: relative;
    font-size: 85px;
    margin-top: 0px;
    margin-bottom: 0px;
    background-color: black;
    color: yellow;
    text-align: center;
    top: -648px;
}
.shotlog {
    position: relative;
    text-align: center;
    display: flex;
    flex-direction: column-reverse;
    overflow: auto;
    width: 220px;
    height: 250px;
    left: 312px;
    top: 434px;
   
    background-color: #fd813d;
}

#countdown, #countdown-message {
    position: relative;
    top: -648px;
    display: none;
    width: 200px;
    margin: 0 auto;
    color: yellow;
    background-color: black;
    text-align: center;
}

#teamone-shoot-button, #teamtwo-shoot-button {
    width: 100px;
    height: 100px;
    background-color: black;
    color: #fd813d;
    border-radius: 50%;
    border-width: 0px;
    margin-top: 10p;
}
#reset-button {
    width: 100px;
    height: 100px;
    background-color: black;
    border-radius: 50%;
    border-width: 0px;
    /* margin-top: 10px; */
    color: #fd813d;
   
}
.up {
    position: relative;
    float: left;
    left: 46px;
    top: -60px;
    font-size: x-large;
    text-align: center;
}
.down {
    position: relative;
    float: right;
    right: 25px;
    top: -60px;
    font-size: x-large;
    text-align: center;
    
}
.left h2 {
    position: relative;
    top: -70px;
    /* left: -2px; */
    font-size: x-large;

}
.right h2 {
    position: relative;
    top: -70px;
    /* right: -25px; */
    font-size: x-large;

}
#simulate {
    position: relative;
    top: -119px;
    left: 175px;
    background-color: black;
    color: #fd813d;
    border: none;
    width: 100px;
    height: 100px;
    background-color: black;
    border-radius: 50%;
    border-width: 0px;
    
    
}
#entire h1 {
    position: relative;
    top: 20px;
}

#ball {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -750px;
    left: 360px;
    border-radius: 50%;
}
#ball2 {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -765px;
    left: 265px;
    border-radius: 50%;
}
#ball3 {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -755px;
    left: 170px;
    border-radius: 50%;
}
#ball4 {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -725px;
    left: 90px;
    border-radius: 50%;
}
#ball5 {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -690px;
    left: 20px;
    border-radius: 50%;
}
#ball6 {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -655px;
    left: -55px;
    border-radius: 50%;
}
#ball7 {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -613px;
    left: -128px;
    border-radius: 50%;
}
#ballMiss {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -641px;
    left: -165px;
    border-radius: 50%;
}
#ballRight {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -750px;
    left: 190px;
    border-radius: 50%;
    transform: rotate(180deg);
}
#ball2Right {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -765px;
    left: 215px;
    border-radius: 50%;
    transform: rotate(180deg);
}
#ball3Right {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -755px;
    left: 245px;
    border-radius: 50%;
    transform: rotate(180deg);
}
#ball4Right {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -725px;
    left: 260px;
    border-radius: 50%;
    transform: rotate(180deg);
}
#ball5Right {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -690px;
    left: 265px;
    border-radius: 50%;
    transform: rotate(180deg);
}
#ball6Right {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -655px;
    left: 260px;
    border-radius: 50%;
    transform: rotate(180deg);
}
#ball7Right {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -613px;
    left: 269px;
    border-radius: 50%;
    transform: rotate(180deg);
}
#ballMissRight {
    width: 30px;
    height: 30px;
    visibility: hidden;
    position: relative;
    top: -641px;
    left: 236px;
    border-radius: 50%;
    transform: rotate(180deg);
}

